src/c64c/generated/C64CParser.py
# Generated from C64CParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class C64CParser ( Parser ):

    grammarFileName = "C64CParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'const'", "'typedef'", "'struct'", "'extern'", 
                     "'static'", "'unsigned'", "'signed'", "'int'", "'char'", 
                     "<INVALID>", "'void'", "'if'", "'else'", "'while'", 
                     "'do'", "'for'", "'break'", "'continue'", "'return'", 
                     "'true'", "'false'", "'++'", "'--'", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'&&'", 
                     "'||'", "'<='", "'>='", "'=='", "'!='", "'='", "'<'", 
                     "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", 
                     "'^'", "'!'", "'~'", "'('", "')'", "'{'", "'}'", "','", 
                     "';'", "'.'", "'...'" ]

    symbolicNames = [ "<INVALID>", "CONST", "TYPEDEF", "STRUCT", "EXTERN", 
                      "STATIC", "UNSIGNED", "SIGNED", "INT", "CHAR", "BOOL", 
                      "VOID", "IF", "ELSE", "WHILE", "DO", "FOR", "BREAK", 
                      "CONTINUE", "RETURN", "TRUE", "FALSE", "INC", "DEC", 
                      "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", 
                      "LOGICAL_AND", "LOGICAL_OR", "LE", "GE", "EQ", "NE", 
                      "ASSIGN", "LT", "GT", "PLUS", "MINUS", "STAR", "SLASH", 
                      "PERCENT", "AMP", "PIPE", "CARET", "BANG", "TILDE", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COMMA", "SEMI", 
                      "DOT", "ELLIPSIS", "HEX_INTEGER", "BINARY_INTEGER", 
                      "DECIMAL_INTEGER", "CHAR_LITERAL", "STRING_LITERAL", 
                      "IDENTIFIER", "BLOCK_COMMENT", "LINE_COMMENT", "WS" ]

    RULE_translationUnit = 0
    RULE_externalDeclaration = 1
    RULE_functionDefinition = 2
    RULE_functionPrototype = 3
    RULE_parameterList = 4
    RULE_parameterDeclaration = 5
    RULE_declaration = 6
    RULE_declarationQualifier = 7
    RULE_typedefDeclaration = 8
    RULE_structDeclaration = 9
    RULE_structMemberDeclaration = 10
    RULE_initDeclaratorList = 11
    RULE_initDeclarator = 12
    RULE_typeSpecifier = 13
    RULE_compoundStatement = 14
    RULE_blockItem = 15
    RULE_statement = 16
    RULE_expressionStatement = 17
    RULE_ifStatement = 18
    RULE_whileStatement = 19
    RULE_doWhileStatement = 20
    RULE_forStatement = 21
    RULE_forInitializer = 22
    RULE_jumpStatement = 23
    RULE_assignmentExpression = 24
    RULE_lvalue = 25
    RULE_assignmentOperator = 26
    RULE_argumentList = 27
    RULE_expression = 28
    RULE_logicalOrExpression = 29
    RULE_logicalAndExpression = 30
    RULE_bitwiseOrExpression = 31
    RULE_bitwiseXorExpression = 32
    RULE_bitwiseAndExpression = 33
    RULE_equalityExpression = 34
    RULE_relationalExpression = 35
    RULE_additiveExpression = 36
    RULE_multiplicativeExpression = 37
    RULE_unaryExpression = 38
    RULE_primaryExpression = 39
    RULE_callExpression = 40
    RULE_integerLiteral = 41

    ruleNames =  [ "translationUnit", "externalDeclaration", "functionDefinition", 
                   "functionPrototype", "parameterList", "parameterDeclaration", 
                   "declaration", "declarationQualifier", "typedefDeclaration", 
                   "structDeclaration", "structMemberDeclaration", "initDeclaratorList", 
                   "initDeclarator", "typeSpecifier", "compoundStatement", 
                   "blockItem", "statement", "expressionStatement", "ifStatement", 
                   "whileStatement", "doWhileStatement", "forStatement", 
                   "forInitializer", "jumpStatement", "assignmentExpression", 
                   "lvalue", "assignmentOperator", "argumentList", "expression", 
                   "logicalOrExpression", "logicalAndExpression", "bitwiseOrExpression", 
                   "bitwiseXorExpression", "bitwiseAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression", "callExpression", 
                   "integerLiteral" ]

    EOF = Token.EOF
    CONST=1
    TYPEDEF=2
    STRUCT=3
    EXTERN=4
    STATIC=5
    UNSIGNED=6
    SIGNED=7
    INT=8
    CHAR=9
    BOOL=10
    VOID=11
    IF=12
    ELSE=13
    WHILE=14
    DO=15
    FOR=16
    BREAK=17
    CONTINUE=18
    RETURN=19
    TRUE=20
    FALSE=21
    INC=22
    DEC=23
    ADD_ASSIGN=24
    SUB_ASSIGN=25
    MUL_ASSIGN=26
    DIV_ASSIGN=27
    MOD_ASSIGN=28
    AND_ASSIGN=29
    OR_ASSIGN=30
    XOR_ASSIGN=31
    LOGICAL_AND=32
    LOGICAL_OR=33
    LE=34
    GE=35
    EQ=36
    NE=37
    ASSIGN=38
    LT=39
    GT=40
    PLUS=41
    MINUS=42
    STAR=43
    SLASH=44
    PERCENT=45
    AMP=46
    PIPE=47
    CARET=48
    BANG=49
    TILDE=50
    LPAREN=51
    RPAREN=52
    LBRACE=53
    RBRACE=54
    COMMA=55
    SEMI=56
    DOT=57
    ELLIPSIS=58
    HEX_INTEGER=59
    BINARY_INTEGER=60
    DECIMAL_INTEGER=61
    CHAR_LITERAL=62
    STRING_LITERAL=63
    IDENTIFIER=64
    BLOCK_COMMENT=65
    LINE_COMMENT=66
    WS=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TranslationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(C64CParser.EOF, 0)

        def externalDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C64CParser.ExternalDeclarationContext)
            else:
                return self.getTypedRuleContext(C64CParser.ExternalDeclarationContext,i)


        def getRuleIndex(self):
            return C64CParser.RULE_translationUnit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranslationUnit" ):
                return visitor.visitTranslationUnit(self)
            else:
                return visitor.visitChildren(self)




    def translationUnit(self):

        localctx = C64CParser.TranslationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_translationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 1)) & ~0x3f) == 0 and ((1 << (_la - 1)) & -9223372036854773761) != 0):
                self.state = 84
                self.externalDeclaration()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(C64CParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternalDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self):
            return self.getTypedRuleContext(C64CParser.FunctionDefinitionContext,0)


        def functionPrototype(self):
            return self.getTypedRuleContext(C64CParser.FunctionPrototypeContext,0)


        def SEMI(self):
            return self.getToken(C64CParser.SEMI, 0)

        def typedefDeclaration(self):
            return self.getTypedRuleContext(C64CParser.TypedefDeclarationContext,0)


        def structDeclaration(self):
            return self.getTypedRuleContext(C64CParser.StructDeclarationContext,0)


        def declaration(self):
            return self.getTypedRuleContext(C64CParser.DeclarationContext,0)


        def getRuleIndex(self):
            return C64CParser.RULE_externalDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternalDeclaration" ):
                return visitor.visitExternalDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def externalDeclaration(self):

        localctx = C64CParser.ExternalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_externalDeclaration)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.functionDefinition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.functionPrototype()
                self.state = 94
                self.match(C64CParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                self.typedefDeclaration()
                self.state = 97
                self.match(C64CParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.structDeclaration()
                self.state = 100
                self.match(C64CParser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.declaration()
                self.state = 103
                self.match(C64CParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(C64CParser.TypeSpecifierContext,0)


        def IDENTIFIER(self):
            return self.getToken(C64CParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(C64CParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(C64CParser.RPAREN, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(C64CParser.CompoundStatementContext,0)


        def declarationQualifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C64CParser.DeclarationQualifierContext)
            else:
                return self.getTypedRuleContext(C64CParser.DeclarationQualifierContext,i)


        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(C64CParser.STAR)
            else:
                return self.getToken(C64CParser.STAR, i)

        def parameterList(self):
            return self.getTypedRuleContext(C64CParser.ParameterListContext,0)


        def getRuleIndex(self):
            return C64CParser.RULE_functionDefinition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = C64CParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 50) != 0):
                self.state = 107
                self.declarationQualifier()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.typeSpecifier()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 114
                self.match(C64CParser.STAR)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(C64CParser.IDENTIFIER)
            self.state = 121
            self.match(C64CParser.LPAREN)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 1)) & ~0x3f) == 0 and ((1 << (_la - 1)) & -9223372036854773787) != 0):
                self.state = 122
                self.parameterList()


            self.state = 125
            self.match(C64CParser.RPAREN)
            self.state = 126
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionPrototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(C64CParser.TypeSpecifierContext,0)


        def IDENTIFIER(self):
            return self.getToken(C64CParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(C64CParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(C64CParser.RPAREN, 0)

        def declarationQualifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C64CParser.DeclarationQualifierContext)
            else:
                return self.getTypedRuleContext(C64CParser.DeclarationQualifierContext,i)


        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(C64CParser.STAR)
            else:
                return self.getToken(C64CParser.STAR, i)

        def parameterList(self):
            return self.getTypedRuleContext(C64CParser.ParameterListContext,0)


        def getRuleIndex(self):
            return C64CParser.RULE_functionPrototype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionPrototype" ):
                return visitor.visitFunctionPrototype(self)
            else:
                return visitor.visitChildren(self)




    def functionPrototype(self):

        localctx = C64CParser.FunctionPrototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionPrototype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 50) != 0):
                self.state = 128
                self.declarationQualifier()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.typeSpecifier()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 135
                self.match(C64CParser.STAR)
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(C64CParser.IDENTIFIER)
            self.state = 142
            self.match(C64CParser.LPAREN)
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 1)) & ~0x3f) == 0 and ((1 << (_la - 1)) & -9223372036854773787) != 0):
                self.state = 143
                self.parameterList()


            self.state = 146
            self.match(C64CParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(C64CParser.VOID, 0)

        def parameterDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C64CParser.ParameterDeclarationContext)
            else:
                return self.getTypedRuleContext(C64CParser.ParameterDeclarationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(C64CParser.COMMA)
            else:
                return self.getToken(C64CParser.COMMA, i)

        def ELLIPSIS(self):
            return self.getToken(C64CParser.ELLIPSIS, 0)

        def getRuleIndex(self):
            return C64CParser.RULE_parameterList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = C64CParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(C64CParser.VOID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.parameterDeclaration()
                self.state = 154
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 150
                        self.match(C64CParser.COMMA)
                        self.state = 151
                        self.parameterDeclaration() 
                    self.state = 156
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==55:
                    self.state = 157
                    self.match(C64CParser.COMMA)
                    self.state = 158
                    self.match(C64CParser.ELLIPSIS)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(C64CParser.TypeSpecifierContext,0)


        def CONST(self):
            return self.getToken(C64CParser.CONST, 0)

        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(C64CParser.STAR)
            else:
                return self.getToken(C64CParser.STAR, i)

        def IDENTIFIER(self):
            return self.getToken(C64CParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return C64CParser.RULE_parameterDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterDeclaration" ):
                return visitor.visitParameterDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def parameterDeclaration(self):

        localctx = C64CParser.ParameterDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameterDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 163
                self.match(C64CParser.CONST)


            self.state = 166
            self.typeSpecifier()
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 167
                self.match(C64CParser.STAR)
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==64:
                self.state = 173
                self.match(C64CParser.IDENTIFIER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(C64CParser.TypeSpecifierContext,0)


        def initDeclaratorList(self):
            return self.getTypedRuleContext(C64CParser.InitDeclaratorListContext,0)


        def declarationQualifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C64CParser.DeclarationQualifierContext)
            else:
                return self.getTypedRuleContext(C64CParser.DeclarationQualifierContext,i)


        def getRuleIndex(self):
            return C64CParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = C64CParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 50) != 0):
                self.state = 176
                self.declarationQualifier()
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 182
            self.typeSpecifier()
            self.state = 183
            self.initDeclaratorList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationQualifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(C64CParser.CONST, 0)

        def EXTERN(self):
            return self.getToken(C64CParser.EXTERN, 0)

        def STATIC(self):
            return self.getToken(C64CParser.STATIC, 0)

        def getRuleIndex(self):
            return C64CParser.RULE_declarationQualifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationQualifier" ):
                return visitor.visitDeclarationQualifier(self)
            else:
                return visitor.visitChildren(self)




    def declarationQualifier(self):

        localctx = C64CParser.DeclarationQualifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declarationQualifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 50) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return C64CParser.RULE_typedefDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StructuredTypedefContext(TypedefDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C64CParser.TypedefDeclarationContext
            super().__init__(parser)
            self.tagName = None # Token
            self.aliasName = None # Token
            self.copyFrom(ctx)

        def TYPEDEF(self):
            return self.getToken(C64CParser.TYPEDEF, 0)
        def STRUCT(self):
            return self.getToken(C64CParser.STRUCT, 0)
        def LBRACE(self):
            return self.getToken(C64CParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(C64CParser.RBRACE, 0)
        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(C64CParser.IDENTIFIER)
            else:
                return self.getToken(C64CParser.IDENTIFIER, i)
        def structMemberDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(C64CParser.StructMemberDeclarationContext)
            else:
                return self.getTypedRuleContext(C64CParser.StructMemberDeclarationContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructuredTypedef" ):
                return visitor.visitStructuredTypedef(self)
            else:
                return visitor.visitChildren(self)


    class ScalarTypedefContext(TypedefDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a C64CParser.TypedefDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPEDEF(self):
            return self.getToken(C64CParser.TYPEDEF, 0)
        def typeSpecifier(self):
            return self.getTypedRuleContext(C64CParser.TypeSpecifierContext,0)

        def IDENTIFIER(self):
            return self.getToken(C64CParser.IDENTIFIER, 0)
        def STAR(self, i:int=None):
            if i is None:
                return self.getTokens(C64CParser.STAR)
            else:
                return self.getToken(C64CParser.STAR, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScalarTypedef" ):
                return visitor.visitScalarTypedef(self)
            else:
                return visitor.visitChildren(self)



    def typedefDeclaration(self):

        localctx = C64CParser.TypedefDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typedefDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 211
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                localctx = C64CParser.ScalarTypedefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.match(C64CParser.TYPEDEF)
                self.state = 188
                self.typeSpecifier()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==43:
                    self.state = 189
                    self.match(C64CParser.STAR)
                    self.state = 194
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 195
                self.match(C64CParser.IDENTIFIER)
                pass

            elif la_ == 2:
                localctx = C64CParser.StructuredTypedefContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 197
                self.match(C64CParser.TYPEDEF)
                self.state = 198
                self.match(C64CParser.STRUCT)
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==64:
                    self.state = 199
                    localctx.tagName = self.match(C64CParser.IDENTIFIER)


                self.state = 202
                self.match(C64CParser.LBRACE)
                self.state = 206
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 1)) & ~0x3f) == 0 and ((1 << (_la - 1)) & -9223372036854773787) != 0):
                    self.state = 203
                    self.structMemberDeclaration()
                    self.state = 208
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 209
                self.match(C64CParser.RBRACE)
                self.state = 210
                localctx.aliasName = self.match(C64CParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(C64CParser.STRUCT, 0)

        def IDENTIFIER(self):
            return self.getToken(C64CParser.IDENTIFIER, 0)

        def LBRACE(self):
            return self.getToken(C64CParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(C64CParser.RBRACE, 0)
